RESOLVED FIXED47294
Application cache isn't consulted on redirect
https://bugs.webkit.org/show_bug.cgi?id=47294
Summary Application cache isn't consulted on redirect
Alexey Proskuryakov
Reported 2010-10-06 12:52:17 PDT
Per HTML5 (and common sense), we should check appcache on each redirection step, intercepting the load as soon as we can serve it from the cache. <rdar://problem/8425647>
Attachments
proposed fix (8.21 KB, patch)
2010-10-06 13:08 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2010-10-06 13:08:29 PDT
Created attachment 69981 [details] proposed fix
Brady Eidson
Comment 2 2010-10-06 13:10:58 PDT
Comment on attachment 69981 [details] proposed fix Tricky area of the code, can't say it's right for sure, but seems reasonable.
Alexey Proskuryakov
Comment 3 2010-10-06 13:15:41 PDT
Note You need to log in before you can comment on or make changes to this bug.