        Reviewed by Brady Eidson.

https://bugs.webkit.org/show_bug.cgi?id=47294
        <rdar://problem/8425647>Application cache isn't consulted on redirect

        Test: http/tests/appcache/main-resource-redirect.html

        * loader/MainResourceLoader.cpp:
        (WebCore::MainResourceLoader::continueAfterNavigationPolicy): If we have substitute data now
        (presumably after a redirect is served by appcache), switch to it.
        (WebCore::MainResourceLoader::willSendRequest): Check appcache for the new URL.

        * loader/MainResourceLoader.h: Made handleDataLoadSoon() take a const ResourceRequest
        reference - it doesn't ever modify it, and we can call it from continueAfterNavigationPolicy() now.



Canonical link: https://commits.webkit.org/59831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69226 268f45cc-cd09-0410-ab3c-d52691b4dbfc